# Blackbird-Dataset

./: .dockerignore  .gitignore  .rosinstall  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  docker_build.sh  docker_run.sh  package.xml  requirements.txt  trajectoryOffsets.yaml  yawConstantTable.md  yawForwardTable.md
downloadUtilities/: blackbirdDataset.torrent  createTorrentFile.js  downloaderUtility.py  torrentFileIndex.txt
fileTreeUtilities/: checkDepthRenders.sh  checkRenders.sh  copyFFMPEGTimestamps.sh  enablePublicCameraFeeds.sh  matchFrames.py  renameDirectory.sh  sequenceDownloader.py  updateIJRRDataset.sh  updateStaticIndex.sh
logConversionUtilities/: bagToCsv.py  bag_to_csv.py  logToRosbag.py  msgConverters.py  settings.json
msg/: MotorRPM.msg
quickstartExample/: README.md
renderUtilities/: blackbirdDatasetUtils.py  compressDataset.py  compressLosslessVideo.py  compressTarball.py  correctTransforms.py  flightgogglesUtils.py  flightgoggles_utils.py  getRunOffsetAndCameraTriggers.py  offsetPoseFiles.py  old_runCollisionCheckOnDataset.py  pruneRosbagTFs.sh  recompressVideoFiles.py  renderDataset.py  renderDatasetUsingROSToHEVC.py  runCollisionCheckOnDataset.py  runRenders.sh  runRendersOnDataset.py  runTiling.sh  thrice_offsets.txt  tileVideos.rb  trajectoryOffsets.yaml  user.conf
republish_images/: CMakeLists.txt  package.xml
ros_utilities/blackbird_dataset/: CMakeLists.txt  package.xml
ros_utilities/blackbird_dataset/launch/: playback_sequence.launch
websiteUtils/: index.html  redirect_rules.xml
website_utils/: index.html  (+1 more)
(+16 files in other folders)
